force-app/main/default/objects/Case/fields/SR_TAT_elapsed__c.field-meta.xml
<CustomField>
    <fullName>SR_TAT_elapsed__c</fullName>
    <formula>IF (NOT(IsClosed),
    IF( Case_SLA_Threshold_1__c &gt; NOW(),&apos;&lt;=&apos;+ $Setup.SLA_Threshold_Warning__c.Case_SLA_Threshold_1_Label__c  ,
        IF(AND(Case_SLA_Threshold_1__c &lt; NOW(), Case_SLA_Threshold_2__c &gt; NOW()), &apos;btw &apos; + $Setup.SLA_Threshold_Warning__c.Case_SLA_Threshold_1_Label__c + &apos; to &apos; + $Setup.SLA_Threshold_Warning__c.Case_SLA_Threshold_2_Label__c,
            IF(AND(Case_SLA_Threshold_2__c &lt; NOW(), Overall_Case_Closure_SLA__c &gt; NOW()),&apos;&gt; &apos; + $Setup.SLA_Threshold_Warning__c.Case_SLA_Threshold_2_Label__c,&apos;&gt;100%&apos;)
        )
    ),
    IF ( Case_SLA_Threshold_1__c &gt; ClosedDate, &apos;&lt;= &apos; + $Setup.SLA_Threshold_Warning__c.Case_SLA_Threshold_1_Label__c ,
        IF(AND(Case_SLA_Threshold_1__c &lt; ClosedDate, Case_SLA_Threshold_2__c &gt; ClosedDate), &apos;btw &apos;+ $Setup.SLA_Threshold_Warning__c.Case_SLA_Threshold_1_Label__c +  &apos; to &apos; + $Setup.SLA_Threshold_Warning__c.Case_SLA_Threshold_2_Label__c ,
            IF(AND(Case_SLA_Threshold_2__c &lt; ClosedDate, Overall_Case_Closure_SLA__c &gt; ClosedDate),$Setup.SLA_Threshold_Warning__c.Case_SLA_Threshold_2_Label__c,&apos;&gt;100%&apos;)
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SR TAT elapsed</label>
    <type>Text</type>
</CustomField>