force-app/main/default/objects/Case/fields/Stage_SLA_1__c.field-meta.xml
<CustomField>
    <fullName>Stage_SLA_1__c</fullName>
    <label>Stage SLA 1</label>
    <type>DateTime</type>
</CustomField>