force-app/main/default/objects/Case/fields/Stage_SLA_2__c.field-meta.xml
<CustomField>
    <fullName>Stage_SLA_2__c</fullName>
    <label>Stage SLA 2</label>
    <type>DateTime</type>
</CustomField>