force-app/main/default/objects/Case/fields/Stage_SLA_3__c.field-meta.xml
<CustomField>
    <fullName>Stage_SLA_3__c</fullName>
    <label>Stage SLA 3</label>
    <type>DateTime</type>
</CustomField>