force-app/main/default/objects/Case/fields/Sub_Source__c.field-meta.xml
<CustomField>
    <fullName>Sub_Source__c</fullName>
    <label>Sub Source</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Source__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Walkin</fullName>
            </value>
            <value>
                <fullName>Letter</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Detractor</fullName>
            </value>
            <value>
                <fullName>Pro-active</fullName>
            </value>
            <value>
                <fullName>Cibil Trigger</fullName>
            </value>
            <value>
                <fullName>One ABC</fullName>
            </value>
            <value>
                <fullName>Incoming</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>