force-app/main/default/objects/Case/fields/Sub_Type_Text__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type_Text__c</fullName>
    <label>Sub Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>