force-app/main/default/objects/Case/fields/SubType_Text_1__c.field-meta.xml
<CustomField>
    <fullName>SubType_Text_1__c</fullName>
    <formula>IF(
  LEN(Sub_Type_Text__c) &gt; 25, 
  TRIM(LEFT(Sub_Type_Text__c, FIND(&quot; &quot;, Sub_Type_Text__c &amp; &quot; &quot;, 25) - 1)) &amp; &quot;  &quot;, 
  Sub_Type_Text__c &amp; &quot;   &quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SubType Text 1</label>
    <type>Text</type>
</CustomField>