force-app/main/default/objects/Case/fields/SubType_Text_2__c.field-meta.xml
<CustomField>
    <fullName>SubType_Text_2__c</fullName>
    <formula>IF(
LEN(Sub_Type_Text__c) &gt; 25,
CHR(160)+ MID(Sub_Type_Text__c, FIND(&quot; &quot;, Sub_Type_Text__c &amp; &quot; &quot;, 25) + 1, LEN(Sub_Type_Text__c)),
&quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SubType Text 2</label>
    <type>Text</type>
</CustomField>