force-app/main/default/objects/Case/fields/Technical_Source__c.field-meta.xml
<CustomField>
    <fullName>Technical_Source__c</fullName>
    <label>Technical Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>