force-app/main/default/objects/Case/fields/Test_Percent__c.field-meta.xml
<CustomField>
    <fullName>Test_Percent__c</fullName>
    <description>sdfsd</description>
    <label>Test Percent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>