force-app/main/default/objects/Case/fields/Track_Id__c.field-meta.xml
<CustomField>
    <fullName>Track_Id__c</fullName>
    <label>Track Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>