force-app/main/default/objects/Case/fields/Type_Sub_Type_Mismatch_Reason__c.field-meta.xml
<CustomField>
    <fullName>Type_Sub_Type_Mismatch_Reason__c</fullName>
    <label>Type Sub Type Mismatch Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>