force-app/main/default/objects/Case/fields/Type_Text__c.field-meta.xml
<CustomField>
    <fullName>Type_Text__c</fullName>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>