force-app/main/default/objects/Case/fields/typeSubTypeMismatch__c.field-meta.xml
<CustomField>
    <fullName>typeSubTypeMismatch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>typeSubTypeMismatch</label>
    <type>Checkbox</type>
</CustomField>