force-app/main/default/objects/Case/fields/Vertical__c.field-meta.xml
<CustomField>
    <fullName>Vertical__c</fullName>
    <formula>IF( NOT( ISBLANK( AssetId ) ) ,  Asset.Vertical__c ,   Text(Account.Verticals__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vertical</label>
    <type>Text</type>
</CustomField>