force-app/main/default/objects/Case/fields/WellnessCaseDetail__c.field-meta.xml
<CustomField>
    <fullName>WellnessCaseDetail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used in Wellness</description>
    <label>Wellness Case Detail</label>
    <referenceTo>WellnessCaseDetail__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>