force-app/main/default/objects/Case/fields/Winning_Email__c.field-meta.xml
<CustomField>
    <fullName>Winning_Email__c</fullName>
    <label>Winning Email</label>
    <type>Email</type>
</CustomField>