force-app/main/default/objects/Case/recordTypes/Framework.recordType-meta.xml
<RecordType>
    <fullName>Framework</fullName>
    <active>true</active>
    <businessProcess>EmailProcess</businessProcess>
    <label>Framework</label>
</RecordType>