force-app/main/default/objects/Case/recordTypes/Interaction.recordType-meta.xml
<RecordType>
    <fullName>Interaction</fullName>
    <active>true</active>
    <businessProcess>EmailProcess</businessProcess>
    <label>Interaction</label>
</RecordType>