force-app/main/default/objects/Case/validationRules/ABHFL_Complaint_type.validationRule-meta.xml
<ValidationRule>
    <fullName>ABHFL_Complaint_type</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Business_Unit__c, &apos;ABHFL&apos;),
ISPICKVAL(Nature__c, &apos;Complaint&apos;),
Owner:User.Assigned_Team__c &lt;&gt; &apos;Grievance Team&apos;,
ISPICKVAL(Stage__c, &apos;Open&apos;) || ISPICKVAL(Stage__c, &apos;In Progress&apos;),
OR(
AND(
ISPICKVAL(Source__c, &apos;Branch&apos;),
NOT(CONTAINS(TEXT(ABHFL_Case_Detail__r.Complaint_Type__c), &apos;Branch Walkin&apos;))
) ||AND(NOT(TEXT(ABHFL_Case_Detail__r.Complaint_Type__c) = &apos;&apos;), ISNEW()),
AND(
ISPICKVAL(Source__c, &apos;Call Centre&apos;),
NOT(CONTAINS(TEXT(ABHFL_Case_Detail__r.Complaint_Type__c), &apos;Phone Inbound&apos;))
) || AND(NOT(TEXT(ABHFL_Case_Detail__r.Complaint_Type__c) = &apos;&apos;), ISNEW() )
)
)</errorConditionFormula>
    <errorMessage>Only Grievance members can change complaint type.
Branch Users please select &apos;Branch Walkin&apos;, Call Center Users please select &apos;Phone Inbound&apos;.</errorMessage>
</ValidationRule>