force-app/main/default/objects/Case/listViews/ABCD_Deposit_Stocks_Tax_Credit_Card_Case.listView-meta.xml
<ListView>
    <fullName>ABCD_Deposit_Stocks_Tax_Credit_Card_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>ABCD Deposit / Stocks /Tax /Credit Card</label>
    <queue>ABCD_Deposit_Stocks_Tax_Credit_Card</queue>
    <sharedTo>
        <group>ABCD_Deposit_Stocks_Tax_Credit_Card_G</group>
    </sharedTo>
</ListView>