force-app/main/default/objects/Case/listViews/ABCD_Insurance_Pocket_Insurance_Case.listView-meta.xml
<ListView>
    <fullName>ABCD_Insurance_Pocket_Insurance_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>ABCD Insurance/Pocket Insurance</label>
    <queue>ABCD_Insurance_Pocket_Insurance</queue>
    <sharedTo>
        <group>ABCD_Insurance_Pocket_Insurance_G</group>
    </sharedTo>
</ListView>