force-app/main/default/objects/Case/listViews/ABCD_Loans_LOB_Related_Case.listView-meta.xml
<ListView>
    <fullName>ABCD_Loans_LOB_Related_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>ABCD Loans/LOB Related</label>
    <queue>ABCD_Loans_LOB_Related</queue>
    <sharedTo>
        <group>ABCD_Loans_LOB_Related_G</group>
    </sharedTo>
</ListView>