force-app/main/default/objects/Case/listViews/ABCD_Loyalty_Rewards_Case.listView-meta.xml
<ListView>
    <fullName>ABCD_Loyalty_Rewards_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>ABCD Loyalty Rewards</label>
    <queue>ABCD_Loyalty_Rewards</queue>
    <sharedTo>
        <group>ABCD_Loyalty_Rewards_G</group>
    </sharedTo>
</ListView>