force-app/main/default/objects/Case/listViews/ABCD_My_Track_L_R_App_Related_Case.listView-meta.xml
<ListView>
    <fullName>ABCD_My_Track_L_R_App_Related_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>ABCD My Track/L&amp;R/App Related</label>
    <queue>ABCD_My_Track_L_R_App_Related</queue>
    <sharedTo>
        <group>ABCD_My_Track_L_R_App_Related_G</group>
    </sharedTo>
</ListView>