force-app/main/default/objects/Case/listViews/ABCD_Servicing_Case.listView-meta.xml
<ListView>
    <fullName>ABCD_Servicing_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>ABCD Servicing</label>
    <queue>ABCD_Servicing</queue>
    <sharedTo>
        <group>ABCD_Servicing_G</group>
    </sharedTo>
</ListView>