force-app/main/default/objects/Case/listViews/ABFL_ABWM_Brokerage_Team_Case.listView-meta.xml
<ListView>
    <fullName>ABFL_ABWM_Brokerage_Team_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>Vertical__c</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>ABFL ABWM Brokerage Team</label>
    <queue>ABFL_ABWM_Brokerage_Team</queue>
    <sharedTo>
        <group>ABFL_ABWM_Brokerage_Team_G</group>
    </sharedTo>
</ListView>