force-app/main/default/objects/Case/listViews/ABFL_ABWM_Customer_Service_Case.listView-meta.xml
<ListView>
    <fullName>ABFL_ABWM_Customer_Service_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>Source__c</columns>
    <columns>Nature__c</columns>
    <columns>Type_Text__c</columns>
    <columns>Sub_Type_Text__c</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>Ageing_Business_Days__c</columns>
    <columns>Overall_Case_Closure_SLA__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Business_Unit__c</columns>
    <columns>LOB__c</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>New,In Progress</value>
    </filters>
    <label>ABFL ABWM Customer Service</label>
    <queue>ABFL_ABWM_Customer_Service</queue>
    <sharedTo>
        <group>ABFL_ABWM_Customer_Service_G</group>
    </sharedTo>
</ListView>